fixed spacing on forms

--- a/src/stylesheets/dashboard-create-event.css
+++ b/src/stylesheets/dashboard-create-event.css
@@ -5,7 +5,6 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 30%;
     padding: 3%;
 }
 button {
@@ -27,4 +26,10 @@ input:invalid {
   
 input:valid {
     border: 2px solid black;
+}
+
+.event-input {
+    text-align: center;
+    padding: 1%;
+    font-size: 1rem;
 }
